--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,8 +5,12 @@ body {
 img {
   width: 100px;
   height: 100px;
+  
 }
 
+body{
+  text-align: center;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
@@ -23,4 +27,20 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plants {
+  display: flex;
+  justify-content: center;
+  margin-top: 32px;
+  gap: 52px;
+}
+
+.info {
+  max-width: 200px;
+  /* display: flex; */
+  /* justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; */
+ 
 }
