--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,12 +2,19 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  padding: 0 16px;
+  font-size: 32px;
+  font-weight: 900;
 }
 
 .footer {
@@ -17,13 +24,48 @@ body {
 }
 
 .sidebar {
-  width: 300px;
+  width: 200px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
-
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.bar {
+  display: flex;
+  /* gap: 2rem; */
+  flex: 1;
+}
+
+.card {
+  width: 200px;
+  margin: 2vh;
+  padding: 2vh;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap: 2rem; */
+  padding: 32px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
